// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountIdentities renders empty 1`] = `
<SideEffect(DocumentTitle)
  title="Identities - Sentry"
>
  <div>
    <SettingsPageHeading
      title="Identities"
    />
    <Panel>
      <PanelHeader
        disablePadding={true}
      >
        <Box
          px={2}
        >
          Identities
        </Box>
      </PanelHeader>
      <PanelBody
        direction="column"
        disablePadding={true}
        flex={false}
      >
        <EmptyMessage>
          There are no identities associated with this account
        </EmptyMessage>
      </PanelBody>
    </Panel>
  </div>
</SideEffect(DocumentTitle)>
`;

exports[`AccountIdentities renders list 1`] = `
<SideEffect(DocumentTitle)
  title="Identities - Sentry"
>
  <div>
    <SettingsPageHeading
      title="Identities"
    />
    <Panel>
      <PanelHeader
        disablePadding={true}
      >
        <Box
          px={2}
        >
          Identities
        </Box>
      </PanelHeader>
      <PanelBody
        direction="column"
        disablePadding={true}
        flex={false}
      >
        <PanelItem
          align="center"
          key="1"
          p={0}
        >
          <Box
            flex="1"
            p={2}
          >
            Github
          </Box>
          <Box
            p={2}
          >
            <Button
              disabled={false}
              onClick={[Function]}
              size="small"
            >
              Disconnect
            </Button>
          </Box>
        </PanelItem>
      </PanelBody>
    </Panel>
  </div>
</SideEffect(DocumentTitle)>
`;
